--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,6 +2,7 @@
 name: 'jaffle_shop'
 version: '0.1'
 require-dbt-version: ">=0.13.0"
+config-version: 2
 profile: 'jaffle_shop'
 source-paths: ["models"]
 analysis-paths: ["analysis"]
