Split out the orders/customers tables into separate sources.

--- a/models/staging/jaffle_shop/jaffle_shop.yml
+++ b/models/staging/jaffle_shop/jaffle_shop.yml
@@ -1,8 +1,8 @@
 version: 2
 
 sources:
-  - name: raw_jaffle_shop
-    description: A replica of the postgres database used to power the jaffle_shop app.
+  - name: raw_jaffle_shop_customers
+    description: A replica of the postgres database used to power the jaffle_shop app (just customer data)
 
     freshness:
       warn_after:
@@ -22,6 +22,18 @@ sources:
               - unique
               - not_null
 
+  - name: raw_jaffle_shop_orders
+    description: A replica of the postgres database used to power the jaffle_shop app (order and payment data)
+
+    freshness:
+      warn_after:
+        period: hour
+        count: 12
+      error_after:
+        period: hour
+        count: 24
+
+    tables:
       - name: orders
         loaded_at_field: _elt_updated_at
         columns:
